- still need get_group_score individually for API call - adding participant link to summary email

--- a/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
@@ -1,6 +1,6 @@
 <h3>Lighter Footprints Summary for {{ summary_date }}</h3>
 <p>
-You are a member of {{ group_name }}.
+You are a member of {{ group_name }}.  To participate in this experiment, visit <a href='{{experiment.participant_url}}'>{{experiment.participant_url}}</a>.
 </p>
 <ul>
     <li>You earned {{ individual_points }} points while the average in your group was {{ average_group_points }} point(s).</li>
