adding FAQ question clarifying group average.

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -164,7 +164,14 @@
             You can leave messages for the other members n your group via the <a href='#group' data-bind='click: activateGroupTab'>My Group tab</a> 
             or use the <a href='#dashboard' data-bind='click:activateDashboardTab'>Dashboard</a> to view your group's progress.
             </p>
-            <h3 class='underline'>Frequently Asked Questions</h3>
+            <h3 id='faq' class='underline'>Frequently Asked Questions</h3>
+            <div class='well alert-white'>
+                <h4>I performed an activity worth 15 points but only 3 points were added to Today's Progress and Today's Score.  Why?</h4>
+                <p>
+                The numbers in Today's Score Today's Progress represent your group's <b>average number of earned green points</b>.  If there are 5
+                people in your group, performing a 15 point activity adds 3 points to the group average (15 / 5 = 3).
+                </p>
+            </div>
             <div class='well alert-white'>
                 <h4>Why do the challenges performed in the previous day not count for today?</h4>
                 <p>
