--- a/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
@@ -2,12 +2,12 @@
 Hello,
 </p>
 <p>
-Thanks in advance for participating in this experiment pretest. You have been randomly allocated to a group of 5, along
-with four other students who are also in ASB 328. You can earn extra credit points for the course by performing actions
-within the app to reduce your virtual carbon footprint. 
+Thanks in advance for participating in this experiment. You have been randomly allocated to a group of 5 along
+with four other participants who have also signed up for this experiment.  You have a chance to earn $100 by performing
+actions within the experiment to reduce your virtual carbon footprint.
 </p>
 <p>
-To access the experiment visit <a href='https://vcweb.asu.edu/accounts/login'>https://vcweb.asu.edu/accounts/login</a> and login with the following
+To access the experiment visit <a href='{{experiment.participant_url}}'>{{experiment.participant_url}}</a> and login with the following
 credentials:
 </p>
 <table cellspacing="3" cellpadding="3">
@@ -20,16 +20,17 @@ credentials:
 You can reset your password at any time at <a href='https://vcweb.asu.edu/accounts/password/reset?email={{ participant.email }}'>https://vcweb.asu.edu/accounts/password/reset</a>
 </p>
 <p>
-The experiment will run starting Monday, February 25th until midnight on Friday, March 1st.  There are three levels to
+The experiment will run from Monday, April 8th until midnight on Friday, April 12th.  There are three levels to
 this experiment, and your group must reach specific average carbon footprint savings in order to advance to the next
-level.  This will be explained in more detail when you visit the app.
+level.  This will be explained in more detail when you visit the website.
 </p>
 <p>
-The extra credit points you can earn is based on the performance of your group:
+The probability of earning $100 is based on the performance of your group:
 <ul>
-    <li> If your group completes level 3 by midnight on Wednesday, February 27th each member of your group will earn 10 points</li>
-    <li> If your group completes level 3 by midnight on Thursday, February 28th each member of your group will earn 8 points</li>
-    <li> If your group completes level 3 by midnight on Friday, March 1st, each member of your group will earn 6 points</li>
-    <li> If your group completes level 2 by midnight on Friday, March 1st, each member of your group will earn 4 points</li>
-    <li> If your group completes level 1 by midnight on Friday, March 1st, each member of your group will earn 2 points</li>
+    <li> If your group completes level 3 by midnight on Wednesday, April 10th, your group has a 20% chance to earn $100</li>
+    <li> If your group completes level 3 by midnight on Thursday, April 11th, your group has a 14% chance to earn $100</li>
+    <li> If your group completes level 3 by midnight on Friday, April 12th, your group has a 8% chance to earn $100</li>
+    <li> If your group completes level 2 by midnight on Friday, April 12th, your group has a 4% chance to earn $100</li>
+    <li> If your group completes level 1 by midnight on Friday, April 12th, your group has a 2% chance to earn $100</li>
+    <li> If your group does not complete level 1 by midnight on Friday, April 12th, your group will still have a 1% chance to earn $100</li>
 </ul>
