fixing email participant URLs

--- a/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
@@ -7,7 +7,8 @@ with four other participants who have also signed up for this experiment.  You h
 actions within the experiment to reduce your virtual carbon footprint.
 </p>
 <p>
-To access the experiment visit <a href='{{experiment.participant_url}}'>{{experiment.participant_url}}</a> and login with the following
+{% comment %} FIXME: hard coded server root {% endcomment %}
+To access the experiment visit <a href='https://vcweb.asu.edu{{experiment.participant_url}}'>https://vcweb.asu.edu{{experiment.participant_url}}</a> and login with the following
 credentials:
 </p>
 <table cellspacing="3" cellpadding="3">
